# routes/routes.ts
@@ -408,21 +408,45 @@ router.post('/booking', async (req: Request, res: Response)=>{
         values: [ticketId,bookingId,userID,passenger_name,contact_data]
     }
 
+    function generateTicketFlights(){
+        let str = ""
+        for (let i = 0; i < prices.length; i++){
+            const el = prices[i];
+            str += `('${ticketId}',${el.flight_id},'${fare_condition}',${Math.min(...el.prices)})\n`
+            if(i != (prices.length-1))
+                str+=','
+        }
+        str+=';'
+        return str
+    }
+
+    const queryInsertTicketFlight = {
+        name: "insert-ticket-flight",
+        text: `
+        insert into ticket_flights (ticket_no, flight_id, fare_conditions, amount)
+        values
+        ${generateTicketFlights()}
+        `,
+        values: []
+    }
+
     try {
         await db.query("BEGIN")
 
         const insBookingRes = await db.query(queryInsertBooking)
         const insTicketRes = await db.query(queryInsertTicket)
+        const insTicketFlight = await db.query(queryInsertTicketFlight)
 
         await db.query("COMMIT")
     } catch(err){
         await db.query("ROLLBACK")
         res.statusCode = 500
+        console.log(err)
         res.json(err)
         return
     }
 
-    res.json([flights, seats, booked, prices, totalPrice, bookingId, userID, ticketId])
+    res.json([flights, seats, booked, prices, totalPrice, bookingId, userID, ticketId, generateTicketFlights()])
 })
 
 export default router
